feat : aumento de cobertura de testes